--- a/public/assets/public/css/style.css
+++ b/public/assets/public/css/style.css
@@ -558,7 +558,8 @@ h1 {
   font-size: 15px;
   font-weight: 100;
   padding: 5px 10px;
-  width: 45px;
+  /*dmitry skibitsky*/
+  /*width: 45px;*/
 }
 .wrapper .category_items .modal-content .variations .btn-group .btn-primary:not(:disabled):not(.disabled):active,
 .wrapper .category_items .modal-content .variations .btn-group .btn-primary:not(:disabled):not(.disabled).active {
