--- a/public/assets/public/css/style.css
+++ b/public/assets/public/css/style.css
@@ -626,7 +626,7 @@ h1 {
   color: #6c6c6c;
   font-size: 18px;
   padding: 5px 10px;
-  width: 60px;
+  /*width: 60px;*/
 }
 .item_card .variations .btn-group .btn-primary:not(:disabled):not(.disabled):active,
 .item_card .variations .btn-group .btn-primary:not(:disabled):not(.disabled).active {
