--- a/public/assets/public/css/style.less
+++ b/public/assets/public/css/style.less
@@ -779,7 +779,7 @@ h1 {
                         font-size: 15px;
                         font-weight: 100;
                         padding: 5px 10px;
-                        width: 45px;
+                        //width: 45px;
                     }
 
                     .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active {
@@ -878,7 +878,7 @@ h1 {
                 color: #6c6c6c;
                 font-size: 18px;
                 padding: 5px 10px;
-                width: 60px;
+                //width: 60px;
             }
 
             .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active {
@@ -2556,6 +2556,13 @@ h1 {
 
         h4 {
             font-size: 15px;
+        }
+
+        .items_mobile_card {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-bottom: 25px;
         }
     }
 
