work with filters

--- a/public/assets/public/css/style.less
+++ b/public/assets/public/css/style.less
@@ -637,6 +637,27 @@ h1 {
         margin-top: 25px;
         margin-bottom: 50px;
 
+        //Search Words
+        .search_word {
+            margin-bottom: 25px;
+
+            h4 {
+                font-weight: 600;
+
+                .words {
+                    font-weight: normal;
+                }
+
+                .close_btn {
+                    border: 1px solid #000;
+                    border-radius: 0;
+                    padding: 5px 7px;
+                    margin-left: 10px;
+                    background: #fff;
+                }
+            }
+        }
+
         .filter_title {
 
             h3 {
