--- a/public/assets/public/css/style.css
+++ b/public/assets/public/css/style.css
@@ -522,6 +522,22 @@ h1 {
   margin-top: 25px;
   margin-bottom: 50px;
 }
+.wrapper .filter_wrapper .search_word {
+  margin-bottom: 25px;
+}
+.wrapper .filter_wrapper .search_word h4 {
+  font-weight: 600;
+}
+.wrapper .filter_wrapper .search_word h4 .words {
+  font-weight: normal;
+}
+.wrapper .filter_wrapper .search_word h4 .close_btn {
+  border: 1px solid #000;
+  border-radius: 0;
+  padding: 5px 7px;
+  margin-left: 10px;
+  background: #fff;
+}
 .wrapper .filter_wrapper .filter_title h3 {
   display: none;
   margin: 15px 0 30px 0;
